--- a/ClientApp/public/custom.css
+++ b/ClientApp/public/custom.css
@@ -1,3 +1,3 @@
-body {
-  font-family: -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
+header {
+  border-bottom: 1px solid #a0a0a03b !important;
 }
