Better photo, add 3rd col

--- a/ClientApp/public/styles.scss
+++ b/ClientApp/public/styles.scss
@@ -1,5 +1,45 @@
-@import "bootstrap/bootstrap";
+$light: #ced4da;
+
+$font-family-sans-serif:      -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+$font-family-monospace:       "Fira Code", Hack, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+$headings-font-family:        "Abril Fatface", -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+
 
 header {
   border-bottom: 1px solid #a0a0a03b !important;
 }
+
+//@import "bootstrap/spinners";
+//@import "bootstrap/alert";
+//@import "bootstrap/breadcrumb";
+//@import "bootstrap/badge";
+//@import "bootstrap/code"; 
+//@import "bootstrap/progress";
+//@import "bootstrap/pagination";
+//@import "bootstrap/carousel";
+//@import "bootstrap/popover";
+//@import "bootstrap/button-group";
+//@import "bootstrap/custom-forms";
+//@import "bootstrap/card";
+//@import "bootstrap/input-group";
+@import "bootstrap/bootstrap-reboot";
+@import "bootstrap/root";
+@import "bootstrap/bootstrap-grid";
+@import "bootstrap/media";
+@import "bootstrap/buttons";
+@import "bootstrap/forms";
+@import "bootstrap/close";
+@import "bootstrap/dropdown";
+@import "bootstrap/images";
+@import "bootstrap/jumbotron";
+@import "bootstrap/list-group";
+@import "bootstrap/modal";
+@import "bootstrap/nav";
+@import "bootstrap/navbar";
+@import "bootstrap/tables";
+@import "bootstrap/tooltip";
+@import "bootstrap/transitions";
+@import "bootstrap/toasts";
+@import "bootstrap/type";
+@import "bootstrap/utilities";
+@import "bootstrap/mixins";
