--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using PortfolioReactApp
-@namespace PortfolioReactApp.Pages
+@using PortfolioApp
+@namespace PortfolioApp.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
