--- a/public/styles.scss
+++ b/public/styles.scss
@@ -2,8 +2,17 @@ $light: #ced4da;
 
 $font-family-sans-serif:      -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 $font-family-monospace:       "Fira Code", Hack, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-$headings-font-family:        "Abril Fatface", -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
+$headings-font-family:        "Abril Fatface", -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+$headings-font-weight:        300;
+$headings-color: #464d54;
+
+$h1-font-size: 1.85rem;
+$h2-font-size: 1.6rem;
+$h3-font-size: 1.45rem;
+$h4-font-size: 1.2rem;
+$h5-font-size: 1.05rem;
+$h6-font-size: 0.9rem;
 
 header {
   border-bottom: 1px solid #a0a0a03b !important;
@@ -13,7 +22,7 @@ header {
 //@import "bootstrap/alert";
 //@import "bootstrap/breadcrumb";
 //@import "bootstrap/badge";
-//@import "bootstrap/code"; 
+//@import "bootstrap/code";
 //@import "bootstrap/progress";
 //@import "bootstrap/pagination";
 //@import "bootstrap/carousel";
